# auto-feature-engineering-loop

./: .gitignore  README.md  config.yaml  desc.md  main_loop.py  program.md  pyproject.toml  rollup.py
dashboard/: app.yml  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/models/: route.ts
dashboard/app/api/research/: route.ts
dashboard/components/: cost-chart.tsx  dashboard.tsx  feature-leaderboard.tsx  governance-strip.tsx  iteration-drawer.tsx  iteration-timeline.tsx  kpi-strip.tsx  metric-chart.tsx
dashboard/lib/: constants.ts
setup/: create_feature_store.sql  create_procedures.sql  create_schema.sql
utils/: cost_tracker.py
